--- a/_assets/styles/main.css
+++ b/_assets/styles/main.css
@@ -1,3 +1,7 @@
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\000033}}
 .row, .marg-btm {
   margin-bottom: 25px; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\000037}}
+.marg-top {
+  margin-top: 25px; }
