--- a/_assets/styles/scss/main.scss
+++ b/_assets/styles/scss/main.scss
@@ -1,11 +1,11 @@
-$row_baseline: 25px;
+$row_margin: 25px;
 
 .row, .marg-btm {
-	margin-bottom: $row_baseline;
+	margin-bottom: $row_margin;
 }
 
 .marg-top {
-	margin-top: $row_baseline;
+	margin-top: $row_margin;
 }
 
 .clickable {
@@ -13,15 +13,11 @@ $row_baseline: 25px;
 }
 
 p {
-	margin-bottom: 1.5em;
-}
-
-.well h4 {
-	margin-bottom: 1.3em;
+	margin-bottom: 2em;
 }
 
 input[type="text"] {
-	margin-bottom: $row_baseline/2;
+	margin-bottom: $row_margin/2;
 }
 
 input[type="number"] {
@@ -30,4 +26,26 @@ input[type="number"] {
 
 textarea.code-output {
 	height: 200px;
+}
+
+.page-header {
+	background: #428bca;
+	margin-top: 0;
+	height: $row_margin*4;
+	line-height: $row_margin*4;
+	margin-bottom: $row_margin*2;
+	h1 {
+		color: #FFF;
+		line-height: $row_margin*4;
+		font-weight: 200;
+		letter-spacing: 2px;
+		margin:0;
+		&:hover {
+			color: #FFF;
+		}
+	}
+}
+
+.hero-row {
+	display:none;
 }
