--- a/_assets/styles/main.css
+++ b/_assets/styles/main.css
@@ -31,33 +31,59 @@ img {
   max-width: 100%; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000335}}
-.thumbnail.img-empty {
-  height: 120px;
-  background: #EAEAEA; }
-
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000340}}
 .page-header {
   background: #428bca;
   margin-top: 0;
   height: 100px;
   line-height: 100px;
   margin-bottom: 50px; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000346}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000341}}
   .page-header h1 {
     color: #FFF;
     line-height: 100px;
     font-weight: 200;
     letter-spacing: 2px;
     margin: 0; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000352}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000347}}
     .page-header h1:hover {
       color: #FFF; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000358}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000353}}
+.tab-content {
+  margin-bottom: 50px; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000357}}
 .hero-row {
   display: none; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000362}}
-.delete-row {
-  height: 20px;
-  margin-bottom: 5px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000361}}
+.hero-preview {
+  min-height: 180px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000363}}
+  .hero-preview .hero-img-preview {
+    position: relative;
+    width: 151px;
+    margin: 0 0 1em; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000367}}
+    .hero-preview .hero-img-preview.img-empty {
+      height: 155px;
+      background: #EAEAEA; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000372}}
+  .hero-preview .hero-text-preview {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 150px;
+    padding: 5px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/mobisets\/_assets\/styles\/scss\/main\.scss}line{font-family:\0000378}}
+    .hero-preview .hero-text-preview p {
+      width: 100%;
+      text-align: center;
+      color: #FFF;
+      background: rgba(0, 0, 0, 0.5);
+      margin: 0;
+      padding: 5px;
+      line-height: 1.5em;
+      text-shadow: 1px 1px 0px #000;
+      letter-spacing: 0;
+      font-family: Helvetica, Tahoma, Verdana, Arial, sans-serif; }
