--- a/_assets/styles/scss/main.scss
+++ b/_assets/styles/scss/main.scss
@@ -32,11 +32,6 @@ img {
 	max-width: 100%;
 }
 
-.thumbnail.img-empty {
-	height: 120px;
-	background: #EAEAEA;
-}
-
 .page-header {
 	background: #428bca;
 	margin-top: 0;
@@ -55,11 +50,42 @@ img {
 	}
 }
 
+.tab-content {
+	margin-bottom: $row_margin*2;
+}
+
 .hero-row {
 	display:none;
 }
 
-.delete-row {
-	height:20px;
-	margin-bottom: 5px;
+.hero-preview {
+	min-height: 180px;
+	.hero-img-preview {
+		position: relative;
+		width: 151px;
+		margin: 0 0 1em;
+		&.img-empty {
+			height: 155px;
+			background: #EAEAEA;
+		}
+	}
+	.hero-text-preview {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 150px;
+		padding: 5px;
+		p {
+			width: 100%;
+			text-align: center;
+			color: #FFF;
+			background: rgba(0, 0, 0, 0.5);
+			margin: 0;
+			padding: 5px;
+			line-height: 1.5em;
+			text-shadow: 1px 1px 0px #000;
+			letter-spacing: 0;
+			font-family: Helvetica, Tahoma, Verdana, Arial, sans-serif;
+		}
+	}
 }
